--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,4 +53,4 @@ stages:
         azureSubscription: 'AzureFunctions'
         appType: 'functionApp'
         WebAppName: 'RatingTeam4'
-        packageForLinux: '$(Build.ArtifactStagingDirectory)/../drop/$(Build.BuildId).zip'
+        packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*/$(Build.BuildId).zip'
